# gitcal

./: .pylintrc  README.md  args.py  gitcal.py  gitcommit.py  setup.cfg  setup.py  table.py
gitcal/: __main__.py  args.py  gitcal.py  gitcommit.py
src/gitcal/: args.py  gitcal.py  gitcommit.py  table.py  tableconfig.py
tests/: test_args.py  test_gitcal.py  test_gitcommit.py  test_table.py
tests/mocked_data/: git-log-big.txt  git-log-big.txt[--num].out.txt  git-log-big.txt[--num].output  git-log-multi-t.txt  git-log-multi-t.txt[--all-users,--collapse,3].output  git-log-multi-t.txt[--collapse,1,--end,2021-06-01,-f,jsmith].out.txt  git-log-multi-t.txt[--no-label,--all-users,-m,Jonathan,John Smith,jsmith,-m,mads3326,Yombo].out.txt  git-log-multi-t.txt[--no-label,--all-users].out.txt  git-log-multi-t.txt[-B,--all-users,--collapse,3].output  git-log-multi-t.txt[-B,--no-label,--all-users,--exclude,long default user].output  git-log-multi-t.txt[-B,--no-label,--all-users,-m,Jonathan,John Smith,jsmith,-m,mads3326,Yombo].output  git-log-multi-t.txt[-B,--no-label,--all-users].output  git-log-multi-t.txt[-b,--all-users,--collapse,4].out.txt  git-log-multi.txt  git-log-multi.txt[--end,2021-03-20].out.txt  git-log-multi.txt[--end,2021-03-20].output  git-log-multi.txt[--end,2021-04-01].out.txt  git-log-multi.txt[--end,2021-04-01].output  git-log-multi.txt[--start,2021-03-01 01:23:45].output  git-log-multi.txt[--start,2021-03-01 01_23_45].out.txt  git-log-multi.txt[--start,2021-03-18].out.txt  git-log-multi.txt[--start,2021-03-18].output  git-log-multi.txt[--start,2021-03-20].out.txt  (+56 more)
(+54 files in other folders)
