[metadata]
name = gitcal-wilgysef
version = 0.0.2
author = wilgysef
author_email = wilgysef@gmail.com
description = Visualize when git commits were made in a repository in a calendar-like format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WiLGYSeF/gitcal
project_urls =
    Bug Tracker = https://github.com/WiLGYSeF/gitcal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gitcal
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    gitcal = gitcal.__main__:main

[options.packages.find]
where = gitcal
